# bvarta-challenge

./: INSTRUCTION.md  LICENSE  README.md  README_EXPLORE.md  explore.ipynb  pyproject.toml
config/: pipeline.yaml
data/output/bronze/event_date=2024-12-31/: .part-00000-ed9bd443-0929-4a60-aa23-4e277c776476.c000.snappy.parquet.crc  part-00000-ed9bd443-0929-4a60-aa23-4e277c776476.c000.snappy.parquet
data/output/bronze/event_date=2025-01-01/: .part-00000-ed9bd443-0929-4a60-aa23-4e277c776476.c000.snappy.parquet.crc  part-00000-ed9bd443-0929-4a60-aa23-4e277c776476.c000.snappy.parquet
data/output/bronze/event_date=2025-01-02/: .part-00000-ed9bd443-0929-4a60-aa23-4e277c776476.c000.snappy.parquet.crc  part-00000-ed9bd443-0929-4a60-aa23-4e277c776476.c000.snappy.parquet
data/output/gold/event_date=2024-12-31/: .part-00000-6d02b95e-f54f-43f6-8eb8-d74f633dbe0f.c000.snappy.parquet.crc  part-00000-6d02b95e-f54f-43f6-8eb8-d74f633dbe0f.c000.snappy.parquet
data/output/gold/event_date=2025-01-01/: .part-00000-6d02b95e-f54f-43f6-8eb8-d74f633dbe0f.c000.snappy.parquet.crc  part-00000-6d02b95e-f54f-43f6-8eb8-d74f633dbe0f.c000.snappy.parquet
data/output/quarantine/: .part-00000-2b4a5fb4-958c-42e8-a37b-ecbd171619ba-c000.snappy.parquet.crc  .part-00001-2b4a5fb4-958c-42e8-a37b-ecbd171619ba-c000.snappy.parquet.crc  part-00000-2b4a5fb4-958c-42e8-a37b-ecbd171619ba-c000.snappy.parquet  part-00001-2b4a5fb4-958c-42e8-a37b-ecbd171619ba-c000.snappy.parquet
job/: pipeline.py  test_pipeline.py
(+8 files in other folders)
